--- a/style.css
+++ b/style.css
@@ -7239,7 +7239,7 @@ body .search-modal .close:hover {
   width: 100%;
   padding: 15px 30px 0 16px;
   height: 63px;
-  font-size: 20px;
+  font-size: 10px;
   font-weight: 500;
   color: #f45d48;
   background: unset;
@@ -7611,7 +7611,7 @@ body .search-modal .close:hover {
 }
 .rs-faq.faq-style1.faq-modify8 .faq-content .accordion .card .card-header .card-link {
   padding: 0px 0px 0 0px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   height: 40px;
 }
@@ -7720,7 +7720,7 @@ body .search-modal .close:hover {
   width: 100%;
   padding: 20px 30px 0 30px;
   height: 71px;
-  font-size: 20px;
+  font-size: 15px;
   line-height: 1.35;
   font-weight: 700;
   background-color: #fff;
@@ -8008,7 +8008,7 @@ body .search-modal .close:hover {
   display: block;
   visibility: hidden;
   transform: translateY(100%);
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
 }
 .rs-partner.partner-main-home .slider .slick-list {
   padding: 0 !important;
